--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,8 +56,8 @@ jobs:
                 modules=$(echo "$modules" | sed -e "s!modules/!!" | xargs -n1 dirname | uniq)
             fi
             #cleaned_modules = $modules | jq  -R -s -c 'split(" ")' | tr -d '\\n'
-            #echo "changed_modules=$modules"
-            echo $modules | jq  -R -s -c 'split(" ")' | tr -d '\\n'
+            echo "changed_modules=$modules"
+            echo "$modules | jq  -R -s -c 'split(" ")' | tr -d '\\n'"
             echo "changed_modules=$(echo $modules | jq  -R -s -c 'split(" ")' | tr -d '\\n')"
             echo $changed_modules
 
