--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -80,6 +80,8 @@ jobs:
         name: Debug check of module1's next version to use
         run: |
             echo "Module 1 Next version is ${{ steps.version_step_module1.outputs.MajorMinorPatch }}"
+            echo "which gitversion"
+            echo "which GitVersion"
 
       - id: python_call_gitversion
         name: Calling GitVersion from python
