--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,7 +56,7 @@ jobs:
                 modules=$(echo "$modules" | sed -e "s!modules/!!" | xargs -n1 dirname | uniq)
             fi
             #cleaned_modules = $modules | jq  -R -s -c 'split(" ")' | tr -d '\\n'
-            echo "modules_json_list=$(echo $mylines | jq  -R -s -c 'split(" ")' | tr -d '\\n')" >> $GITHUB_OUTPUT
+            echo "modules_json_list=$(echo $modules | jq  -R -s -c 'split(" ")' | tr -d '\\n')" >> $GITHUB_OUTPUT
 
       - id: install_gitversion
         name: Install GitVersion
