--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,15 +51,13 @@ jobs:
       - name: bash handle module files
         id: bash_modules
         run: |
+
             modules=$(echo "${{ steps.build_changed_files.outputs.changed_files }}" | grep "^modules/" || true)
             if [[ ! -z "$modules" ]]; then
-                modules_spaces=$(echo "$modules" | sed -e "s!modules/!!" | xargs -n1 dirname | uniq)
+                modules=$(echo "$modules" | sed -e "s!modules/!!" | xargs -n1 dirname | uniq)
             fi
-            echo $modules_spaces
-            echo "modules_list=[\"${modules_spaces// /\",\"}\"]" >> $GITHUB_OUTPUT
-            echo $modules_list
-            #cleaned_modules = $modules | jq  -R -s -c 'split(" ")' | tr -d '\\n'
-            #echo "modules_json_list=$(echo $modules | jq  -R -s -c 'split(" ")' | tr -d '\\n')" >> $GITHUB_OUTPUT
+            echo "changed_modules=$modules"
+            echo "modules_list=[\"${changed_modules// /\",\"}\"]" >> $GITHUB_OUTPUT
 
       - id: install_gitversion
         name: Install GitVersion
@@ -80,6 +78,7 @@ jobs:
         name: Debug check of module1's next version to use
         run: |
             echo "Module 1 Next version is ${{ steps.version_step_module1.outputs.MajorMinorPatch }}"
+            echo "Changed Modules: ${{ steps.bash_modules.outputs.changed_modules }}"
             echo "Modules List: ${{ steps.bash_modules.outputs.modules_list }}"
 
       # - id: python_call_gitversion
