--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,12 +36,13 @@ jobs:
             # Pushes output to $GITHUB_OUTPUT so it can be used in other jobs/steps
             if ${{ github.event_name == 'pull_request' }}; then
                 echo "changed_files=$(git diff --name-only -r HEAD^1 HEAD | xargs)" >> $GITHUB_OUTPUT
-                export CHANGED_MODULES=$( git diff --name-only origin/$GITHUB_BASE_REF ${{ github.event.after }} -- modules | grep -E 'modules/.*/' | cut -d/ -f2 | uniq)
+                export changed_modules=$( git diff --name-only origin/$GITHUB_BASE_REF ${{ github.event.after }} -- modules | grep -E 'modules/.*/' | cut -d/ -f2 | uniq)
             else
                 echo "changed_files=$(git diff --name-only ${{ github.event.before }} ${{ github.event.after }} | xargs)" >> $GITHUB_OUTPUT
-                export CHANGED_MODULES=$( git diff --name-only ${{ github.event.before }} ${{ github.event.after }} -- modules | grep -E 'modules/.*/'  | cut -d/ -f2 | uniq)
+                export changed_modules=$( git diff --name-only ${{ github.event.before }} ${{ github.event.after }} -- modules | grep -E 'modules/.*/'  | cut -d/ -f2 | uniq)
             fi
-            echo "$CHANGED_MODULES"
+            echo "$changed_modules"
+            echo "modules_list_output=[\"${changed_modules// /\",\"}\"]" >> $GITHUB_OUTPUT
             # TODO: Monday - pass this list to a job that goes off and checks the next module version tag/release
 
       - id: recheckout_fetch_depth_0_if_needed
@@ -51,16 +52,6 @@ jobs:
         uses: actions/checkout@v4
         with:
             fetch-depth: 0
-
-      - name: bash handle module files
-        id: bash_modules
-        run: |
-            modules_parsed=$(echo "${{ steps.build_changed_files.outputs.changed_files }}" | grep "^modules/" || true)
-            if [[ ! -z "$modules" ]]; then
-                modules_list=$(echo "$modules_parsed" | sed -e "s!modules/!!" | xargs -n1 dirname | uniq)
-            fi
-            echo "changed_modules=$modules_list"
-            echo "modules_list_output=[\"${changed_modules// /\",\"}\"]" >> $GITHUB_OUTPUT
 
       - id: install_gitversion
         name: Install GitVersion
@@ -86,8 +77,7 @@ jobs:
             echo "changed modules are: ${{ steps.bash_modules.outputs.changed_modules }}"
 
             echo "Module 1 Next version is ${{ steps.version_step_module1.outputs.MajorMinorPatch }}"
-            echo "Changed Modules: ${{ steps.bash_modules.outputs.changed_modules }}"
-            echo "Modules List Output: ${{ steps.bash_modules.outputs.modules_list_output }}"
+            echo "Modules List Output: ${{ steps.build_changed_files.outputs.modules_list_output }}"
 
       # - id: python_call_gitversion
       #   name: Calling GitVersion from python
