--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,6 +43,7 @@ jobs:
             fi
             echo "$changed_modules"
             echo "modules_list_output=[\"${changed_modules// /\",\"}\"]" >> $GITHUB_OUTPUT
+            ##echo "modules_list_output=$(echo [\"${modules_spaces// /\",\"}\"])" >> $GITHUB_OUTPUT
             # TODO: Monday - pass this list to a job that goes off and checks the next module version tag/release
 
       - id: recheckout_fetch_depth_0_if_needed
