--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,11 +42,11 @@ jobs:
                 export changed_modules=$( git diff --name-only ${{ github.event.before }} ${{ github.event.after }} -- modules | grep -E 'modules/.*/'  | cut -d/ -f2 | uniq)
             fi
             echo "$changed_modules"
-            #echo "modules_list_output=$(echo "$changed_modules" | jq  --raw-input .  | jq --slurp .)"     # testing friday pm
-            modules_list_changes=$(echo "$changed_modules" | jq  --raw-input .  | jq --slurp .)
-            echo "modules_list_output=$modules_list_changes"
-            ##echo "modules_list_output=[\"${changed_modules// /\",\"}\"]" | jq >> $GITHUB_OUTPUT
-            ##echo "modules_list_output=$(echo [\"${modules_spaces// /\",\"}\"])" >> $GITHUB_OUTPUT
+            echo "modules_list_output=$(echo "$changed_modules" | jq  --raw-input .  | jq --slurp . | jq -c .)"  >> $GITHUB_OUTPUT       # testing friday pm
+            #modules_list_changes=$(echo "$changed_modules" | jq  --raw-input .  | jq --slurp .)
+            #echo "modules_list_output=$modules_list_changes" >> $GITHUB_OUTPUT
+
+            
             # TODO: Monday - pass this list to a job that goes off and checks the next module version tag/release
 
       - id: recheckout_fetch_depth_0_if_needed
