--- a/.github/workflows/matrix-test.yml
+++ b/.github/workflows/matrix-test.yml
@@ -30,7 +30,7 @@ jobs:
         shardIndex: [1, 2, 3, 4]
     steps:
       - name: Upload blob report to GitHub Actions Artifacts
-        #if: always()
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: report-${{ matrix.shardIndex }}
