--- a/.github/workflows/matrix-test.yml
+++ b/.github/workflows/matrix-test.yml
@@ -39,6 +39,7 @@ jobs:
       matrix:
         shardIndex: [1, 2, 3, 4]
     steps:
+      - run: mkdir -p reports
       - name: Upload blob report to GitHub Actions Artifacts
         if: always()
         uses: actions/upload-artifact@v4
