--- a/.github/workflows/matrix-test.yml
+++ b/.github/workflows/matrix-test.yml
@@ -22,15 +22,16 @@ on:
       #   required: true
 
 jobs:
-  test_file:
-    runs-on: ubuntu-latest
-    steps:
-    - run: mkdir -p reports/test
-    - run: echo hello > reports/test/world.txt
-    - uses: actions/upload-artifact@v4
-      with:
-        name: my-artifact
-        path: reports/test/world.txt
+  # test_file:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   # works here without codebase checkout?
+  #   - run: mkdir -p reports/test
+  #   - run: echo hello > reports/test/world.txt
+  #   - uses: actions/upload-artifact@v4
+  #     with:
+  #       name: my-artifact
+  #       path: reports/test/world.txt
 
   run-tests:
     runs-on: ubuntu-latest
@@ -39,8 +40,9 @@ jobs:
       matrix:
         shardIndex: [1, 2, 3, 4]
     steps:
+      # Needs to checkout the codebase for the artifact upload to work here?
       - uses: actions/checkout@v4
-      - run: mkdir -p reports
+      #- run: mkdir -p reports
       - name: Upload blob report to GitHub Actions Artifacts
         if: always()
         uses: actions/upload-artifact@v4
