--- a/.github/workflows/matrix-test.yml
+++ b/.github/workflows/matrix-test.yml
@@ -63,6 +63,9 @@ jobs:
           path: reports/
           pattern: report-*
           merge-multiple: true
+      - run: cat report-*
+
+          
       # # https://github.com/actions/runner/pull/2477
       # # parallel matrix doesn't yet support dynamic outputs
       # # hence storing individual output in text files and re-joining them later
