--- a/.github/workflows/matrix-test.yml
+++ b/.github/workflows/matrix-test.yml
@@ -63,8 +63,10 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           path: reports
-          pattern: report-*
+          #pattern: report-*
           merge-multiple: true
+      - name: Display structure of downloaded files
+        run: ls -R reports
       - run: ls reports/report-*
       - run: cat reports/report-*
 
