--- a/.github/workflows/matrix-test.yml
+++ b/.github/workflows/matrix-test.yml
@@ -57,8 +57,8 @@ jobs:
     needs: [run-tests]
     runs-on: ubuntu-latest
     steps:
-      # Needs to checkout the codebase for the artifact downoad to work here. Strange
-      - uses: actions/checkout@v4
+      # Adding this results in the codebase being in DetectChanges/DetectChanges
+      #- uses: actions/checkout@v4
       - name: Download blob reports from GitHub Actions Artifacts
         uses: actions/download-artifact@v4
         with:
