--- a/.github/workflows/matrix-test.yml
+++ b/.github/workflows/matrix-test.yml
@@ -47,7 +47,7 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: report-${{ matrix.shardIndex }}
+          name: "report-${{ matrix.shardIndex }}.txt"
           path: reports/
           retention-days: 1
 
