--- a/.github/workflows/matrix-test.yml
+++ b/.github/workflows/matrix-test.yml
@@ -57,6 +57,9 @@ jobs:
     needs: [run-tests]
     runs-on: ubuntu-latest
     steps:
+      - run: mkdir reports
+      - run: echo $PWD
+      
       # Adding this results in the codebase being in DetectChanges/DetectChanges
       #- uses: actions/checkout@v4
       - name: Download blob reports from GitHub Actions Artifacts
