--- a/.github/workflows/matrix-test.yml
+++ b/.github/workflows/matrix-test.yml
@@ -44,7 +44,7 @@ jobs:
       #- uses: actions/checkout@v4
       - run: mkdir -p reports
       - name: Upload blob report to GitHub Actions Artifacts
-        if: always()
+        #if: always()
         uses: actions/upload-artifact@v4
         with:
           name: report-${{ matrix.shardIndex }}                # artifact reference name - not the filename!
