--- a/.github/workflows/matrix-test.yml
+++ b/.github/workflows/matrix-test.yml
@@ -48,7 +48,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: report-${{ matrix.shardIndex }}                # artifact reference name - not the filename!
-          path: reports/report-${{ matrix.shardIndex }}.txt    # actual filename and path
+          path: report-${{ matrix.shardIndex }}.txt    # actual filename and path
           #retention-days: 1
 
   merge-reports:
@@ -67,7 +67,7 @@ jobs:
       - name: Download blob reports from GitHub Actions Artifacts
         uses: actions/download-artifact@v4
         with:
-          path: reports
+          path: report-
           pattern: report-*
           merge-multiple: true
       - run: ls -R *
