--- a/.github/workflows/matrix-test.yml
+++ b/.github/workflows/matrix-test.yml
@@ -40,9 +40,10 @@ jobs:
       matrix:
         shardIndex: ["1", "2", "3", "4"]    # trying strings as it doesn't seem to work with integers...
     steps:
+      - name: Create a File
+        run: echo "${{ matrix.shardIndex }}" > report-${{ matrix.shardIndex }}.txt
       # Needs to checkout the codebase for the artifact upload to work here. Strange
       #- uses: actions/checkout@v4
-      - run: mkdir -p reports
       - name: Upload blob report to GitHub Actions Artifacts
         #if: always()
         uses: actions/upload-artifact@v4
