--- a/.github/workflows/matrix-test.yml
+++ b/.github/workflows/matrix-test.yml
@@ -49,8 +49,9 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: report-${{ matrix.shardIndex }}                # artifact reference name - not the filename!
-          path: report-${{ matrix.shardIndex }}.txt    # actual filename and path
-          #retention-days: 1
+          path: reports/report-${{ matrix.shardIndex }}.txt    # actual filename and path
+          retention-days: 1    # minimum retention
+          overwrite: true      # deletes and creates new same named file if found
 
   merge-reports:
     # Merge reports after run-tests, even if some shards have failed
@@ -68,14 +69,14 @@ jobs:
       - name: Download blob reports from GitHub Actions Artifacts
         uses: actions/download-artifact@v4
         with:
-          #path: report-
+          path: reports/
           pattern: report-*
           merge-multiple: true
       - run: ls -R *
       - name: Display structure of downloaded files
         run: ls -R *
-      - run: ls report-*
-      - run: cat report-*
+      - run: ls reports/report-*
+      - run: cat reports/report-*
 
           
       # # https://github.com/actions/runner/pull/2477
