--- a/.github/workflows/matrix-test.yml
+++ b/.github/workflows/matrix-test.yml
@@ -40,8 +40,9 @@ jobs:
       matrix:
         shardIndex: [1, 2, 3, 4]    # trying strings as it doesn't seem to work with integers...
     steps:
+      #- run: mkdir -p reports
       - name: Create a File
-        run: echo "${{ matrix.shardIndex }}" > report-${{ matrix.shardIndex }}.txt
+        run: echo "${{ matrix.shardIndex }}" > reports/report-${{ matrix.shardIndex }}.txt
       # Needs to checkout the codebase for the artifact upload to work here. Strange
       #- uses: actions/checkout@v4
       - name: Upload blob report to GitHub Actions Artifacts
